updated annotation for the api doc

--- a/config/packages/nelmio_api_doc.yaml
+++ b/config/packages/nelmio_api_doc.yaml
@@ -8,7 +8,7 @@ nelmio_api_doc:
             /api/login_check:
                 post:
                     tags:
-                        - Token
+                        - Login
                     operationId: postCredentialsItem
                     summary: Get JWT Token for authentication
                     requestBody:
