--- a/config/packages/nelmio_api_doc.yaml
+++ b/config/packages/nelmio_api_doc.yaml
@@ -24,6 +24,10 @@ nelmio_api_doc:
                                 application/json:
                                     schema:
                                         $ref: '#/components/schemas/Token'
+                        '400':
+                            description: 'Error: Bad Request'
+                        '401':
+                            description: 'Error: Unauthorized'
         components:
             schemas:
                 Token:
